Replaced Guava usage with Code JDK methods