@@ -16,7 +16,6 @@
 
 package io.appform.ranger.discovery.bundle;
 
-import com.google.common.collect.ImmutableSet;
 import lombok.experimental.UtilityClass;
 
 import java.util.Set;
@@ -31,6 +30,6 @@ public class Constants {
 
     public static final int DEFAULT_PORT = -1;
     public static final int DEFAULT_DW_CHECK_INTERVAL = 15;
-    public static final Set<String> LOCAL_ADDRESSES = ImmutableSet.of("127.0.0.1", "127.0.1.1", "localhost");
+    public static final Set<String> LOCAL_ADDRESSES = Set.of("127.0.0.1", "127.0.1.1", "localhost");
 
 }
